Finish updatin html for all pages, now just need to add the content

--- a/events/index.html
+++ b/events/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
         <!--–– Last edit: 1/25/18 6:57PM ––-->
-		<title>OLAS - About</title>
+		<title>OLAS - Events</title>
         <link rel="shortcut icon" href="olas_icon.ico" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -99,125 +99,68 @@
 							<div class="8u 12u(mobile)" id="content">
 								<article id="main">
 									<header>
-										<h2>What is OLAS?</h2>
+										<h2>Our Events</h2>
 									</header>
-                                    <p>OLAS is a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in Indigenous, African, and European ancestry. It is our mission to promote political, social, cultural and ethnic awareness that furthers the progression of the Latino/a community on both a collegiate and a community plane and to facilitate cultural exchange and knowledge.</p>
-									<section>
-										<header>
-											<h3 id="mission">Our Mission</h3>
-										</header>
-										<p>The Organization of Latin American Students’ (OLAS) purpose is composed of three main goals:</p>
-                                        <ul id="mission_list">
-                                            <li>
-                                                <p>To serve as a general support network for its members and all undergraduate and graduate Latino students at the University of Chicago.</p>
-                                            </li>
-                                            <li>
-                                                <p>To educate its members and the university community about diverse Latino cultures.</p>
-                                            </li>
-                                            <li>
-                                                <p>To foster awareness of ourselves as students, citizens, Latinos and active participants in several communities.</p>
-                                            </li>
-                                        </ul>
-									</section>
-									<section>
-										<header>
-											<h3 id="what">What We Do</h3>
-										</header>
-										<p><em>Community:</em> We strive to foster an immersive and supportive community for Latin Americans and invite our non-Latin American friends to join us in forming positive relations between each other and the greater Chicago community.</p>
-                                        <p><em>Culture:</em> We strive to promote an immersive culturally rich Latin American environment through hosting workshops, fostering productive discussions, and promoting community events.</p>
-                                        <p><em>Networking:</em> We strive to be a resource for our members by connecting them to the opportunities available on and off campus.</p>
-									</section>
+                                    <p>
+                                        OLAS is committed to planning and executing a wide variety of events that cater to our community. In order to do this, we have two types of events: Series and Individual.
+                                    </p>
+                                    <ul>
+                                        <li>
+                                            <p>Series events are long-running events that center around the same theme (e.g. Habla Con OLAS focuses on spreading a basic understanding of the Spanish Language).</p>
+                                        </li>
+                                        <li>
+                                            <p>Individual Events are events whose topics and themes are highly manuable, often reflect important current events, and tend to be submitted by our membership rather than just the board. Individual Events can eventually become a Series Events.</p>
+                                        </li>
+                                    </ul>
                                     <section id="board">
 										<header>
-											<h3>Our Board</h3>
+											<h3 id="upcoming">Upcoming Events</h3>
 										</header>
+                                        <p>Events will be updated soon!</p>
                                         <ul>
                                             <li id="juan" class="board">
                                                 <img src="img/juan.png" width="200px" />
-                                                <h4>Juan Anderson</h4>
-                                                <p><em>Co-President</em></p>
-                                                <p>Juan Anderson is a third year at the University of Chicago majoring in Economics with a minor in Computer Science.</p>
-                                                <p>andersonjc@uchicago.edu</p>
                                             </li>
                                             <li id="dani" class="board">
                                                 <img src="img/dani.jpg" width="200px" />
-                                                <h4>Silvia Moreno</h4>
-                                                <p><em>Co-President</em></p>
-                                                <p>Daniela Moreno a third year at the University, majoring in Public Policy studies. She was born in Colombia, and grew up in South Florida. She has been involved with OLAS since her first year and is co-president of the organization. Coming from a tight-knit Colombian family, I knew that I could find a home away from home with OLAS, allowing me to stay grounded to my Latin roots.</p>
-                                                <p>sdmoreno@uchicago.edu</p>
                                             </li>
                                             <li id="nylani" class="board">
                                                 <img src="img/nylani.jpg" width="200px" />
-                                                <h4>Nylani Rios</h4>
-                                                <p><em>Communications Co-Chair</em></p>
-                                                <p>Nylani is a fourth year majoring in Psychology with a visual arts minor and a plan to be the next big CMO for a top notch music production company. She is originally from Chicago, raised in the infamous Pureto Rican neighborhood Humboldt Park, which has taught her to love her culture and share her pride with her fellow LatinX hermanos y hermanas. She also loves arroz con gandules.</p>
-                                                <p>nrios23@uchicago.edu</p>
                                             </li>
                                             <li id="chema" class="board">
                                                 <img src="img/chema.jpg" width="200px" />
-                                                <h4>Jose Reyes</h4>
-                                                <p><em>Communications Co-Chair</em></p>
-                                                <p>Jose Reyes is a second year studying Computer Science with a minor in Computational Neuroscience and one of the best programmers OLAS has ever had!</p>
-                                                <p>reyesj5@uchicago.edu</p>
                                             </li>
                                             <li id="emma" class="board">
                                                 <img src="img/emma.jpg" width="200px" />
-                                                <h4>Emma Perez</h4>
-                                                <p><em>Logistics Chair</em></p>
-                                                <p>Emma is a proud Cuban and a third year at the University of Chicago, majoring in Global Studies and minoring in Human Rights. She's from West Palm Beach, FL and is obsessed with all things platanos. She is a lover of Zumba, Beyonce, and especially platanos maduros fritos. She hopes to attend law school and work in criminal justice reform. Find her at Zumba or at an OLAS meeting near you! Without her work, OLAS would be in a logistical mess! </p>
-                                                <p>emmacperez@uchicago.edu</p>
                                             </li>
                                             <li id="konrad" class="board">
                                                 <img src="img/konrad.jpg" width="200px" />
-                                                <h4>Konrad Danzer</h4>
-                                                <p><em>Finance Chair</em></p>
-                                                <p>Konrad Danzer is a second-year public policy major passionate about learning and traveling the world. Current Finance Chair of OLAS, he was Born to Venezuelan parents in the United States, he understands the dynamic aspects of being part of multiple cultures and he's looking forward to having a fun and eventful year with OLAS!</p>
-                                                <p>kdanzer@uchicago.edu</p>
                                             </li>
                                             <li id="ayling" class="board">
                                                 <img src="img/ayling.jpg" width="200px" />
-                                                <h4>Ayling Dominguez</h4>
-                                                <p><em>Political Chair</em></p>
-                                                <p>Political Chair	Ayling Dominguez is a 3rd year Global Studies and Political Science double major, and our wonderfully active Political Chair. Of Mexican and Dominican descent, she is filled with taquitos, tostones, and love for OLAS. Look out for some engaging political events this year!</p>
-                                                <p>azd@uchicago.edu</p>
                                             </li>
                                             <li id="berto" class="board">
                                                 <img src="img/berto.jpg" width="200px" />
-                                                <h4>Roberto Rabines</h4>
-                                                <p><em>Interim Political Chair</em></p>
-                                                <p>Second year residing in the space between anthropology and technology.</p>
-                                                <p>#guerreroinocente<br>#confuerzaperu<br>#vamoscarajo<br>#teamomiperu</p>
-                                                <p>berto@uchicago.edu</p>
                                             </li>
                                             <li id="kathia" class="board">
                                                 <img src="img/kathia.jpg" width="200px" />
-                                                <h4>Kathia Rodriguez</h4>
-                                                <p><em>Cultural Committee Co-Chair</em></p>
-                                                <p>Kathia Rodriguez is a proud Mexican and 3rd year at UChicago majoring in Global Studies. She loves her Latin culture especially when it comes to dancing and art which works out great seeing as how she’s OLAS’s Cultural Committee co-chair.</p>
-                                                <p>rodriguezk@uchicago.edu</p>
                                             </li>
                                             <li id="martina" class="board">
                                                 <img src="img/martina.JPG" width="200px" />
-                                                <h4>Martina Lentino</h4>
-                                                <p><em>Cultural Committee Co-Chairs</em></p>
-                                                <p>Martina is a third year in the College studying Art History and Latin American Studies. She’s originally from Buenos Aires, Argentina, and grew up in Miami, FL. She loves buying shoes and eating empanadas.</p>
-                                                <p>mlentino@uchicago.edu</p>
                                             </li>
                                             <li id="gabino" class="board">
                                                 <img src="img/gabino.jpg" width="200px" />
-                                                <h4>Gabino Sanchez Jr.</h4>
-                                                <p><em>Social Chair</em></p>
-                                                <p>Gabino Sanchez Jr. is a third-year Public Policy and Psychology double-major. He also serves as the Social Chair on the OLAS Board. Loves tacos and a nice cold glass of horchata.</p>
-                                                <p>gabino@uchicago.edu</p>
                                             </li>
                                             <li id="lorenzo" class="board">
                                                 <img src="img/lorenzo.jpg" width="200px" />
-                                                <h4>Lorenzo Guio</h4>
-                                                <p><em>Community Service Chair</em></p>
-                                                <p>Lorenzo is a fourth year in the college studying molecular engineering. He’s originally from Bogota, Colombia but lives in Miami. When not doing service, you can find him dancing merengue or racing his bike.</p>
-                                                <p>lortero@uchicago.edu</p>
                                             </li>
                                         </ul>
+									</section>
+                                    <section>
+										<header>
+											<h3 id="suggestions">Got any ideas for events? Make a suggestion!</h3>
+										</header>
+                                        <p>Form coming soon!</p>
 									</section>
 								</article>
 							</div>
