--- a/cultural_show/index.html
+++ b/cultural_show/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
         <!--–– Last edit: 1/25/18 6:57PM ––-->
-		<title>OLAS - About</title>
+		<title>OLAS - Show</title>
         <link rel="shortcut icon" href="olas_icon.ico" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
