--- a/gallery/index.html
+++ b/gallery/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
         <!--–– Last edit: 1/25/18 6:57PM ––-->
-		<title>OLAS - Videos</title>
+		<title>OLAS - Gallery</title>
         <link rel="shortcut icon" href="olas_icon.ico" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -98,9 +98,16 @@
 						<div class="row 200%">
 							<div class="8u 12u(mobile)" id="content">
 								<article id="main">
+                                    <header>
+										<h2 id="photos">Cultural Show Photographs</h2>
+									</header>
+                                    <section>
+                                        <p>Photos will be uploaded soon!</p>
+                                    </section>
 									<header>
 										<h2 id="videos">Cultural Show Videos</h2>
 									</header>
+                                    <section>
                                         <ul>
                                             <li id="salsa" class="show">
                                                 <div class="vids">
