General meeting changes
put general meeting information in sidebar, i think the membership page should have more general stuff about the meetings

--- a/index.html
+++ b/index.html
@@ -183,10 +183,14 @@
 											<a href="#" class="image fit"><img src="img/pic12.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Meeting</h4>
+											<h4>General Meeting</h4>
 											<p>
-												We'll be updating events soon!
-											</p>
+								                Join us for the second general meeting of the quarter Wednesday February 14th. 
+                                            </p>
+                                            <p>
+                                                We will be going over information about how to get involved in this year's culture show, whether it be through dancing or volunteering within various committees! 
+                                            </p>
+                                            <p><a href="https://www.facebook.com/events/177820689658516/">Join the event!</a></p>
 										</div>
 									</div>
 									<div class="row 50%">
