--- a/membership/index.html
+++ b/membership/index.html
@@ -122,8 +122,9 @@
                                     <section>
 										<header>
 											<h3>Meetings</h3>
+                                    <!--This information should be more general and not talk about specific meetings (which should be on the upcomming like I have it-->
 										</header>
-                                        <p>Our next open meeting for 2017-18 is on Wednesday, February 14th, from 7:00-8:30pm. Location is in Office Multicultural Students Affairs (OMSA) at 5710 South Woodlawn Avenue.</p>
+                                        <p>MORE GENERAL DESCRIPTION HERE PERHAPS.Our next open meeting for 2017-18 is on Wednesday, February 14th, from 7:00-8:30pm. Location is in Office Multicultural Students Affairs (OMSA) at 5710 South Woodlawn Avenue.</p>
                                         <p>For our full calendar with up-to-date events and meetings, click <a class="link" href="https://calendar.google.com/calendar/embed?src=olasboard%40gmail.com&ctz=America/Chicago">here</a>.</p>
 									</section>
                                     <section>
