meetings link to fb
^^

--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
                                             <p>
                                                 We will be going over information about how to get involved in this year's culture show, whether it be through dancing or volunteering within various committees! 
                                             </p>
-                                            <p><a href="https://www.facebook.com/events/177820689658516/">Join the event!</a></p>
+                                            <p> 
+                                                <a     href="https://www.facebook.com/events/177820689658516/">Join the event!</a>
+                                            </p>
 										</div>
 									</div>
 									<div class="row 50%">
