--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Helios</a></h1>
+                                <!-- tmep header -->
+								<h1></h1>
 							</header>
 						</div>
 
