--- a/index.html
+++ b/index.html
@@ -161,28 +161,6 @@
 											<a href="#" class="image fit"><img src="img/pic10.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>OLAS Study Break</h4>
-											<p>
-												We'll be updating events soon!
-											</p>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="4u">
-											<a href="#" class="image fit"><img src="img/pic11.jpg" alt="" /></a>
-										</div>
-										<div class="8u">
-											<h4>Community Service</h4>
-											<p>
-												We'll be updating events soon!
-											</p>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="4u">
-											<a href="#" class="image fit"><img src="img/pic12.jpg" alt="" /></a>
-										</div>
-										<div class="8u">
 											<h4>General Meeting</h4>
 											<p>
 								                Join us for the second general meeting of the quarter Wednesday February 14th. 
@@ -192,6 +170,43 @@
                                             </p>
                                             <p> 
                                                 <a     href="https://www.facebook.com/events/177820689658516/">Join the event!</a>
+                                            </p>
+										</div>
+									</div>
+									<div class="row 50%">
+										<div class="4u">
+											<a href="#" class="image fit"><img src="img/pic11.jpg" alt="" /></a>
+										</div>
+										<div class="8u">
+											<h4>Premios OLAS Practices</h4>
+											<p>
+												Remenber to show up to practices, attendance is mandatory! Email your choreographer if you can't make it! Schedule is as follows:
+											</p>
+                                            <h5>Wednesdays @Ida Noyes Basement</h5>
+                                            <ul>
+                                                <li>Merengue: 5:00-6:00 p.m.</li>
+                                                <li>Urbano: 6:00-7:00 p.m.</li>
+                                            </ul>
+                                            <h5>Fridays @BARS (Bartlett)</h5>
+                                            <ul>
+                                                <li>Folklorico: 8:30-9:30 p.m.</li>
+                                                <li>Samba: 9:30-10:30 p.m.</li>
+                                            </ul>
+                                            <h5>Saturdays @Ida Noyes Basement</h5>
+                                            <ul>
+                                                <li>Bachata: 2:00-3:00 p.m.</li>
+                                                <li>Salsa: 3:00-4:00 p.m.</li>
+                                            </ul>
+										</div>
+									</div>
+									<div class="row 50%">
+										<div class="4u">
+											<a href="#" class="image fit"><img src="img/pic12.jpg" alt="" /></a>
+										</div>
+										<div class="8u">
+											<h4>Marketing Committee</h4>
+											<p>
+								                If you want to become more involve with OLAS and the planning of our annual cultural show, we hold board meetings every week and they are open to all members! Feel free to come and give your perspective on events, planning, as well as meet the OLAS board! 
                                             </p>
 										</div>
 									</div>
