--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 										<p>
 											Welcome to OLAS UChicago
 										</p>
-                                        <a href="#" class="image featured"><img src="img/pic01.jpg" alt="" /></a>
+                                        <a href="#" class="image featured"><img src="img/show/flyer.png" alt="" /></a>
                                         <!-- testing a countdown -->
                                         <h3><a href="cultural_show/index.html">Premios OLAS Countdown:</a></h3>
                                         <!-- Display the countdown timer in an element -->
