--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 										We are a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in...
 									</p>
 									<footer>
-										<a href="#" class="button">Learn More</a>
+										<a href="about/index.html" class="button">Learn More</a>
 									</footer>
 								</section>
 								<hr />
@@ -159,7 +159,7 @@
 									</p>
 									<div class="row 50%">
 										<div class="4u">
-											<a href="#" class="image fit"><img src="img/pic10.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="img/sidebar/meeting.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
 											<h4>General Meeting</h4>
@@ -176,7 +176,7 @@
 									</div>
 									<div class="row 50%">
 										<div class="4u">
-											<a href="#" class="image fit"><img src="img/pic11.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="img/sidebar/pic06.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
 											<h4>Premios OLAS Practices</h4>
@@ -202,7 +202,7 @@
 									</div>
 									<div class="row 50%">
 										<div class="4u">
-											<a href="#" class="image fit"><img src="img/pic12.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="" alt="" /></a>
 										</div>
 										<div class="8u">
 											<h4>Marketing Committee</h4>
@@ -211,7 +211,7 @@
                                             </p>
 										</div>
 									</div>
-									<div class="row 50%">
+									<!--<div class="row 50%">
 										<div class="4u">
 											<a href="#" class="image fit"><img src="img/pic13.jpg" alt="" /></a>
 										</div>
@@ -232,9 +232,9 @@
 												We'll be updating events soon!
 											</p>
 										</div>
-									</div>
+									</div>-->
 									<footer>
-										<a href="#" class="button">Events page</a>
+										<a href="events/index.html" class="button">Events page</a>
 									</footer>
 								</section>
 							</div>
@@ -405,7 +405,8 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; OLAS. All rights reserved.</li><li>Thank you!</a></li>
+											<li>&copy; OLAS. All rights reserved.</li>
+                                            <li>Thank you!</li>
 										</ul>
 									</div>
 
