--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 						<nav id="nav">
 							<ul>
 								<li>
-                                    <a href="index.html">Home</a>
+                                    <a href="../index.html">Home</a>
                                 </li>
                                 <li>
-									<a href="about/index.html">About</a>
+									<a href="../about/index.html">About</a>
 									<ul>
-										<li><a href="about/index.html#mission">Our Mission</a></li>
-										<li><a href="about/index.html#what">What We Do</a></li>
+										<li><a href="../about/index.html#mission">Our Mission</a></li>
+										<li><a href="../about/index.html#what">What We Do</a></li>
 										<li><a href="about/index.html#board">Our Board</a></li>
 									</ul>
 								</li>
@@ -135,87 +135,15 @@
 									</section>
 								</article>
 							</div>
-                    <!--Sidebar-->
+                        <!--Sidebar-->
 							<div class="4u 12u(mobile)" id="sidebar">
-								<hr class="first" />
-								<section>
-									<header>
-										<h3><a href="#">About OLAS</a></h3>
-									</header>
-									<p>
-										We are a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in...
-									</p>
-									<footer>
-										<a href="#" class="button">Learn More</a>
-									</footer>
-								</section>
-								<hr />
-								<section>
-									<header>
-										<h3><a href="#">Upcoming Events</a></h3>
-									</header>
-									<p>
-										Thank you to our members for supporting all our events!
-									</p>
-									<div class="row 50%">
-										<div class="4u">
-											<a href="#" class="image fit"><img src="img/pic10.jpg" alt="" /></a>
-										</div>
-										<div class="8u">
-											<h4>OLAS Study Break</h4>
-											<p>
-												We'll be updating events soon!
-											</p>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="4u">
-											<a href="#" class="image fit"><img src="img/pic11.jpg" alt="" /></a>
-										</div>
-										<div class="8u">
-											<h4>Community Service</h4>
-											<p>
-												We'll be updating events soon!
-											</p>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="4u">
-											<a href="#" class="image fit"><img src="img/pic12.jpg" alt="" /></a>
-										</div>
-										<div class="8u">
-											<h4>Meeting</h4>
-											<p>
-												We'll be updating events soon!
-											</p>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="4u">
-											<a href="#" class="image fit"><img src="img/pic13.jpg" alt="" /></a>
-										</div>
-										<div class="8u">
-											<h4>Photoshoot</h4>
-											<p>
-												We'll be updating events soon!
-											</p>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="4u">
-											<a href="#" class="image fit"><img src="img/pic14.jpg" alt="" /></a>
-										</div>
-										<div class="8u">
-											<h4>Other event</h4>
-											<p>
-												We'll be updating events soon!
-											</p>
-										</div>
-									</div>
-									<footer>
-										<a href="#" class="button">Events page</a>
-									</footer>
-								</section>
+                                <script>
+                                    window.onload = function(){
+                                        $.get("side_bar.html", function(data){
+                                            $("#sidebar").html(data);
+                                        })
+                                    }
+                                </script>
 							</div>
 						</div>
 						<hr />
