--- a/index.html
+++ b/index.html
@@ -137,9 +137,22 @@
 							</div>
                         <!--Sidebar-->
 							<div class="4u 12u(mobile)" id="sidebar">
+                                <hr class="first" />
+                                <section>
+                                    <header>
+                                        <h3><a href="#">About OLAS</a></h3>
+                                    </header>
+                                    <p>
+                                        We are a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in...
+                                    </p>
+                                    <footer>
+                                        <a href="#" class="button">Learn More</a>
+                                    </footer>
+                                </section>
+                                <hr />
                                 <script>
                                     window.onload = function(){
-                                        $.get("side_bar.html", function(data){
+                                        $.get("http://www.olasuchicago.org/side_bar.html", function(data){
                                             $("#sidebar").html(data);
                                         })
                                     }
