--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-        <!--–– Last edit: 1/25/18 6:57PM ––-->
-		<title>Organization of Latin American Students</title>
-        <link rel="shortcut icon" href="olas_icon.ico" />
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="stylesheet" href="assets/css/extra_details.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body class="right-sidebar">
+<head>
+    <!--–– Last edit: 1/25/18 6:57PM ––-->
+	<title>Organization of Latin American Students</title>
+    <link rel="shortcut icon" href="olas_icon.ico" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/extra_details.css" />
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
+<body class="right-sidebar">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -34,7 +34,7 @@
 						<nav id="nav">
 							<ul>
 								<li>
-                                    <a href=>Home</a>
+                                    <a href="http://www.olasuchicago.org/index.html">Home</a>
                                 </li>
                                 <li>
 									<a href="http://www.olasuchicago.org/about/index.html">About</a>
