--- a/side_bar.html
+++ b/side_bar.html
@@ -10,9 +10,15 @@
             <a href="#" class="image fit"><img src="img/pic10.jpg" alt="" /></a>
         </div>
         <div class="8u">
-            <h4>OLAS Study Break</h4>
+            <h4>General Meeting</h4>
             <p>
-                We'll be updating events soon!
+                Join us for the second general meeting of the quarter Wednesday February 14th. 
+            </p>
+            <p>
+                We will be going over information about how to get involved in this year's culture show, whether it be through dancing or   volunteering within various committees! 
+            </p>
+            <p> 
+                <a     href="https://www.facebook.com/events/177820689658516/">Join the event!</a>
             </p>
         </div>
     </div>
@@ -21,10 +27,25 @@
             <a href="#" class="image fit"><img src="img/pic11.jpg" alt="" /></a>
         </div>
         <div class="8u">
-            <h4>Community Service</h4>
+            <h4>Premios OLAS Practices</h4>
             <p>
-                We'll be updating events soon!
+                Remenber to show up to practices, attendance is mandatory! Email your choreographer if you can't make it! Schedule is as follows:
             </p>
+            <h5>Wednesdays @Ida Noyes Basement</h5>
+            <ul>
+                <li>Merengue: 5:00-6:00 p.m.</li>
+                <li>Urbano: 6:00-7:00 p.m.</li>
+            </ul>
+            <h5>Fridays @BARS (Bartlett)</h5>
+            <ul>
+                                                <li>Folklorico: 8:30-9:30 p.m.</li>
+                <li>Samba: 9:30-10:30 p.m.</li>
+            </ul>
+            <h5>Saturdays @Ida Noyes Basement</h5>
+            <ul>
+                <li>Bachata: 2:00-3:00 p.m.</li>
+                <li>Salsa: 3:00-4:00 p.m.</li>
+            </ul>
         </div>
     </div>
     <div class="row 50%">
@@ -32,13 +53,13 @@
             <a href="#" class="image fit"><img src="img/pic12.jpg" alt="" /></a>
         </div>
         <div class="8u">
-            <h4>Meeting</h4>
+            <h4>Marketing Committee</h4>
             <p>
-                We'll be updating events soon!
-            </p>
+                If you want to become more involve with OLAS and the planning of our annual cultural show, we   hold board meetings every week and they are open to all members! Feel free to come and give your perspective on events, planning, as well as meet the OLAS board! 
+            </p>    
         </div>
-    </div>
-    <div class="row 50%">
+    </div> 
+    <div cl    ass="row 50%">
         <div class="4u">
             <a href="#" class="image fit"><img src="img/pic13.jpg" alt="" /></a>
         </div>
@@ -63,4 +84,4 @@
     <footer>
         <a href="#" class="button">Events page</a>
     </footer>
-</section>  
+</section>
