--- a/side_bar.html
+++ b/side_bar.html
@@ -75,7 +75,7 @@
             <a href="#" class="image fit"><img src="img/pic14.jpg" alt="" /></a>
         </div>
         <div class="8u">
-            <h4>Other event</h4>
+            <h4>Other events</h4>
             <p>
                 We'll be updating events soon!
             </p>
