--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <script>
                     window.onload = function(){
                         $.get("http://www.olasuchicago.org/nav_bar.html", function(data){
-                            $("#side_bar").html(data);
+                            $("#nav").html(data);
                         })
                     }
                 </script>
