updating nav bar

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                         <hr class="first" />
                         <section>
                             <header>
-                                <h3><a href="#">About OLAS</a></h3>
+                                <h3><a href="about/index.html">About OLAS</a></h3>
                             </header>
                             <p>
                                 We are a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in...
                             </p>
                             <footer>
-                                <a href="#" class="button">Learn More</a>
+                                <a href="about/index.html#mission" class="button">Learn More</a>
                             </footer>
                         </section>
                         <hr />
