--- a/nav_bar.html
+++ b/nav_bar.html
@@ -6,8 +6,8 @@
         <a href="http://www.olasuchicago.org/about/index.html">About</a>
         <ul>
             <li><a href="http://www.olasuchicago.org/about/index.html#mission">Our Mission</a></li>
-            <li><a href="http://www.olasuchicago.org/index.html#what">What We Do</a></li>
-            <li><a href="http://www.olasuchicago.org/index.html#board">Our Board</a></li>
+            <li><a href="http://www.olasuchicago.org/about/index.html#what">What We Do</a></li>
+            <li><a href="http://www.olasuchicago.org/about/index.html#board">Our Board</a></li>
         </ul>
     </li>
     <li>
