--- a/side_bar.html
+++ b/side_bar.html
@@ -82,6 +82,6 @@
         </div>
     </div>
     <footer>
-        <a href="#" class="button">Events page</a>
+        <a href="http://www.olasuchicago.org/events/index.html#upcoming" class="button">Events page</a>
     </footer>
 </section>
