--- a/about/index.html
+++ b/about/index.html
@@ -99,7 +99,7 @@
 							<div class="8u 12u(mobile)" id="content">
 								<article id="main">
 									<header>
-										<h2>What is OLAS?</h2>
+										<h2 id="goals">What is OLAS?</h2>
 									</header>
                                     <p>OLAS is a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in Indigenous, African, and European ancestry. It is our mission to promote political, social, cultural and ethnic awareness that furthers the progression of the Latino/a community on both a collegiate and a community plane and to facilitate cultural exchange and knowledge.</p>
 									<section>
