--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 We are a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in...
                             </p>
                             <footer>
-                                <a href="about/index.html#mission" class="button">Learn More</a>
+                                <a href="about/index.html#goals" class="button">Learn More</a>
                             </footer>
                         </section>
                         <hr />
