fix greeting no link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <article id="main">
                             <header>
                                 <!-- dynamic greeting -->
-                                <h2><a id="greeting" href='#'></a></h2>
+                                <h2 id="greeting"></h2>
                                 <p>
                                     Welcome to OLAS UChicago
                                 </p>
