--- a/side_bar.html
+++ b/side_bar.html
@@ -75,13 +75,13 @@
             <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/pic14.jpg" alt="" /></a>
         </div>
         <div class="8u">
-            <h4>Other event</h4>
+            <h4>Other Events</h4>
             <p>
                 We'll be updating events soon!
             </p>
         </div>
     </div>
     <footer>
-        <a href="https://www.olasuchicago.org/events/index.html" class="button">Events page</a>
+        <a href="http://www.olasuchicago.org/events/index.html#upcoming" class="button">Events page</a>
     </footer>
 </section>
