--- a/side_bar.html
+++ b/side_bar.html
@@ -7,7 +7,7 @@
     </p>
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar/meeting.jpg" alt="" /></a>
+            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar/meeting.jpg" alt="Meeting" /></a>
         </div>
         <div class="8u">
             <h4>General Meeting</h4>
