--- a/side_bar.html
+++ b/side_bar.html
@@ -7,7 +7,7 @@
     </p>
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar/meeting.jpg" alt="" /></a>
+            <a href="#" class="image fit"><img src="http://www.olasuchicago.org/img/sidebar/meeting.jpg" alt="" /></a>
         </div>
         <div class="8u">
             <h4>General Meeting</h4>
@@ -18,13 +18,13 @@
                 We will be going over information about how to get involved in this year's culture show, whether it be through dancing or   volunteering within various committees! 
             </p>
             <p> 
-                <a     href="https://www.facebook.com/events/177820689658516/">Join the event!</a>
+                <a     href="http://www.facebook.com/events/177820689658516/">Join the event!</a>
             </p>
         </div>
     </div>
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar/pic06.jpg" alt="" /></a>
+            <a href="#" class="image fit"><img src="http://www.olasuchicago.org/img/sidebar/pic06.jpg" alt="" /></a>
         </div>
         <div class="8u">
             <h4>Premios OLAS Practices</h4>
@@ -50,7 +50,7 @@
     </div>
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar" alt="" /></a>
+            <a href="#" class="image fit"><img src="http://www.olasuchicago.org/img/sidebar" alt="" /></a>
         </div>
         <div class="8u">
             <h4>Marketing Committee</h4>
@@ -61,7 +61,7 @@
     </div> 
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/pic13.jpg" alt="" /></a>
+            <a href="#" class="image fit"><img src="http://www.olasuchicago.org/img/pic13.jpg" alt="" /></a>
         </div>
         <div class="8u">
             <h4>Photoshoot</h4>
@@ -72,7 +72,7 @@
     </div>
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/pic14.jpg" alt="" /></a>
+            <a href="#" class="image fit"><img src="http://www.olasuchicago.org/img/pic14.jpg" alt="" /></a>
         </div>
         <div class="8u">
             <h4>Other Events</h4>
