Updated nav on all pages

--- a/partnerships/index.html
+++ b/partnerships/index.html
@@ -15,6 +15,18 @@
 		<link rel="stylesheet" href="../assets/css/main.css" />
         <link rel="stylesheet" href="partner_style.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
+        
+        <script>
+            /* nav bar and side bar */
+            window.onload = function(){
+                $.get("http://www.olasuchicago.org/nav_bar.html", function(data){
+                    $("#nav").html(data);
+                })
+                $.get("http://www.olasuchicago.org/side_bar.html", function(data){
+                    $("#sidebar").html(data);
+                })
+            }
+        </script>
 	</head>
 	<body class="right-sidebar">
 		<div id="page-wrapper">
@@ -31,62 +43,7 @@
 
 					<!-- Nav -->
 						<nav id="nav">
-							<ul>
-								<li>
-                                    <a href="../index.html">Home</a>
-                                </li>
-                                <li>
-									<a href="../about/index.html">About</a>
-									<ul>
-										<li><a href="../about/index.html#mission">Our Mission</a></li>
-										<li><a href="../about/index.html#what">What We Do</a></li>
-										<li><a href="../about/index.html#board">Our Board</a></li>
-									</ul>
-								</li>
-                                <li>
-                                    <a href="../membership/index.html">Members</a>
-                                    <ul>
-										<li><a href="../membership/index.html#get">Get involved</a></li>
-										<li><a href="../membership/index.html#member"></a>How to become a member</li>
-									</ul>
-                                </li>
-                                <li>
-                                    <a href="../events/index.html">Events</a>
-                                    <ul>
-										<li><a href="../events/index.html#upcoming">Upcoming events</a></li>
-										<li><a href="../events/index.html#suggestions"></a>Suggest an event</li>
-									</ul>
-                                </li>
-								<li>
-									<a href="../cultural_show/index.html">Cultural Show</a>
-									<ul>
-										<li><a href="../cultural_show/index.html#committees">Committees</a></li>
-										<li><a href="../cultural_show/index.html#volunteer">Volunteer</a></li>
-                                        <li><a href="../cultural_show/index.html#gallery">Gallery</a></li>
-										<li>
-											<a href="../cultural_show/previous/index.html">Previous Years &hellip;</a>
-											<ul>
-												<li><a href="../cultural_show/previous/index.html#2017">2017</a></li>
-											</ul>
-										</li>
-									</ul>
-								</li>
-                                <li>
-									<a href="../gallery/index.html">Gallery</a>
-									<ul>
-										<li><a href="../gallery/index.html#photos">Photographs</a></li>
-                                        <li><a href="../gallery/index.html#videos">Videos</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="../partnerships/index.html">Partnerships</a>
-									<ul>
-										<li><a href="../partnerships/index.html#accenture">Accenture</a></li>
-										<li><a href="../partnerships/index.html#google">Google</a></li>
-                                        <li><a href="../partnerships/index.html#mural">Mural Magazine</a></li>
-									</ul>
-								</li>
-							</ul>
+                            <!-- loaded in head -->
 						</nav>
 
 				</div>
@@ -130,13 +87,7 @@
 							</div>
                     <!--Sidebar-->
 							<div class="4u 12u(mobile)" id="sidebar">
-								<script>
-                                    window.onload = function(){
-                                        $.get("http://www.olasuchicago.org/side_bar.html", function(data){
-                                            $("#sidebar").html(data);
-                                        })
-                                    }
-                                </script>
+                                <!-- loaded in head -->
 							</div>
 						</div>
 					</div>
