--- a/side_bar.html
+++ b/side_bar.html
@@ -7,7 +7,7 @@
     </p>
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar/meeting.jpg" alt="Meeting" /></a>
+            <a href="https://www.olasuchicago.org/img/sidebar/meeting.jpg" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar/meeting.jpg" alt="Meeting" /></a>
         </div>
         <div class="8u">
             <h4>General Meeting</h4>
@@ -24,7 +24,7 @@
     </div>
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar/pic06.jpg" alt="" /></a>
+            <a href="https://www.olasuchicago.org/img/sidebar/pic06.jpg" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar/pic06.jpg" alt="PremiosOlas" /></a>
         </div>
         <div class="8u">
             <h4>Premios OLAS Practices</h4>
@@ -50,7 +50,7 @@
     </div>
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar" alt="" /></a>
+            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/sidebar" alt="Marketing" /></a>
         </div>
         <div class="8u">
             <h4>Marketing Committee</h4>
@@ -61,7 +61,7 @@
     </div> 
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/pic13.jpg" alt="" /></a>
+            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/pic13.jpg" alt="hey" /></a>
         </div>
         <div class="8u">
             <h4>Photoshoot</h4>
@@ -72,7 +72,7 @@
     </div>
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/pic14.jpg" alt="" /></a>
+            <a href="#" class="image fit"><img src="https://www.olasuchicago.org/img/pic14.jpg" alt="hey" /></a>
         </div>
         <div class="8u">
             <h4>Other Events</h4>
