--- a/nav_bar.html
+++ b/nav_bar.html
@@ -25,7 +25,7 @@
         </ul>
     </li>
     <li>
-        <a href="http://www.olasuchicago.org/ultural_show/index.html">Cultural Show</a>
+        <a href="http://www.olasuchicago.org/cultural_show/index.html">Cultural Show</a>
         <ul>
             <li><a href="http://www.olasuchicago.org/cultural_show/index.html#committees">Committees</a></li>
             <li><a href="http://www.olasuchicago.org/cultural_show/index.html#volunteer">Volunteer</a></li>
